kubernetes/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: baashe.uk
spec:
  ingressClassName: nginx  # <--- THIS IS CRITICAL
  tls: 
    - hosts:
        - baashe.uk
      secretName: baashe-uk-tls 
  rules:
    - host: baashe.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 8080
          - path: /api/cart
            pathType: Prefix
            backend:
              service:
                name: cart
                port:
                  number: 8081
          - path: /api/order
            pathType: Prefix
            backend:
              service:
                name: order
                port:
                  number: 8082
          - path: /api/payment
            pathType: Prefix
            backend:
              service:
                name: payment
                port:
                  number: 8083
          - path: /api/product
            pathType: Prefix
            backend:
              service:
                name: product
                port:
                  number: 8084
