kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx  # <--- THIS IS CRITICAL
  rules:
    - host: baashe.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 8080
          - path: /api/cart
            pathType: Prefix
            backend:
              service:
                name: cart
                port:
                  number: 8081
          - path: /api/order
            pathType: Prefix
            backend:
              service:
                name: order
                port:
                  number: 8082
          - path: /api/payment
            pathType: Prefix
            backend:
              service:
                name: payment
                port:
                  number: 8083
          - path: /api/product
            pathType: Prefix
            backend:
              service:
                name: product
                port:
                  number: 8084
