kubernetes/ingress/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: prometheus.baashe.uk
spec:
  tls:
  - hosts:
    - prometheus.baashe.uk
    secretName: prometheus-tls-cert
  rules:
  - host: prometheus.baashe.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-monitoring-kube-prometh-prometheus
            port:
              number: 9090
